--- a/Day4/index.html
+++ b/Day4/index.html
@@ -78,6 +78,13 @@
                 </form>
             </div>
         </div>
+        <div class="footer">
+            <h1> THANK YOU !!! </h1>
+        </div>
+        <div class="copyright">
+            &copy;All Right Reserved by Chirag Sinha .
+        </div>
+        
     </div>
 </body>
 
